--- a/sites/__minimal__/package.json
+++ b/sites/__minimal__/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sites/--minimal--",
-  "version": "1.0.0-",
+  "version": "1.0.0-beta.5",
   "description": "Starter site for a basic Bodiless site",
   "author": "Chris Oden <coden@its.jnj.com>",
   "homepage": "",
@@ -11,17 +11,17 @@
     "test": "__tests__"
   },
   "dependencies": {
-    "@bodiless/backend": "^1.0.0-",
-    "@bodiless/cli": "^1.0.0-",
-    "@bodiless/components": "^1.0.0-",
-    "@bodiless/components-ui": "^1.0.0-",
-    "@bodiless/core": "^1.0.0-",
-    "@bodiless/documentation": "^1.0.0-",
-    "@bodiless/fclasses": "^1.0.0-",
-    "@bodiless/gatsby-theme-bodiless": "^1.0.0-",
-    "@bodiless/layouts-ui": "^1.0.0-",
-    "@bodiless/richtext-ui": "^1.0.0-",
-    "@bodiless/ui": "^1.0.0-",
+    "@bodiless/backend": "^1.0.0-beta.5",
+    "@bodiless/cli": "^1.0.0-beta.5",
+    "@bodiless/components": "^1.0.0-beta.5",
+    "@bodiless/components-ui": "^1.0.0-beta.5",
+    "@bodiless/core": "^1.0.0-beta.5",
+    "@bodiless/documentation": "^1.0.0-beta.5",
+    "@bodiless/fclasses": "^1.0.0-beta.5",
+    "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.5",
+    "@bodiless/layouts-ui": "^1.0.0-beta.5",
+    "@bodiless/richtext-ui": "^1.0.0-beta.5",
+    "@bodiless/ui": "^1.0.0-beta.5",
     "autoprefixer": "^10.0.0",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
