--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sites/vital-demo",
-  "version": "1.0.0-",
+  "version": "1.0.0-beta.5",
   "description": "Demo site for a Bodiless site using the Vital DS",
   "author": "Chris Oden <coden@its.jnj.com>",
   "homepage": "",
@@ -11,22 +11,22 @@
     "test": "__tests__"
   },
   "dependencies": {
-    "--cxstarter--": "^1.0.0-",
+    "--cxstarter--": "^1.0.0-beta.5",
     "@babel/core": "^7.9.0",
-    "@bodiless/backend": "^1.0.0-",
-    "@bodiless/cli": "^1.0.0-",
-    "@bodiless/components": "^1.0.0-",
-    "@bodiless/core": "^1.0.0-",
-    "@bodiless/cx-editors": "^1.0.0-",
-    "@bodiless/cx-elements": "^1.0.0-",
-    "@bodiless/cx-link": "^1.0.0-",
-    "@bodiless/cx-templates": "^1.0.0-",
-    "@bodiless/documentation": "^1.0.0-",
-    "@bodiless/fclasses": "^1.0.0-",
-    "@bodiless/gatsby-theme-bodiless": "^1.0.0-",
-    "@bodiless/search": "^1.0.0-",
-    "@bodiless/ui": "^1.0.0-",
-    "@bodiless/webpack": "^1.0.0-",
+    "@bodiless/backend": "^1.0.0-beta.5",
+    "@bodiless/cli": "^1.0.0-beta.5",
+    "@bodiless/components": "^1.0.0-beta.5",
+    "@bodiless/core": "^1.0.0-beta.5",
+    "@bodiless/cx-editors": "^1.0.0-beta.5",
+    "@bodiless/cx-elements": "^1.0.0-beta.5",
+    "@bodiless/cx-link": "^1.0.0-beta.5",
+    "@bodiless/cx-templates": "^1.0.0-beta.5",
+    "@bodiless/documentation": "^1.0.0-beta.5",
+    "@bodiless/fclasses": "^1.0.0-beta.5",
+    "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.5",
+    "@bodiless/search": "^1.0.0-beta.5",
+    "@bodiless/ui": "^1.0.0-beta.5",
+    "@bodiless/webpack": "^1.0.0-beta.5",
     "autoprefixer": "^10.0.0",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
