--- a/packages/vital-layout/package.json
+++ b/packages/vital-layout/package.json
@@ -37,6 +37,7 @@
     "@bodiless/vital-elements": "^1.0.0-beta.5",
     "@bodiless/vital-image": "^1.0.0-beta.5",
     "@bodiless/vital-link": "^1.0.0-beta.5",
+    "@bodiless/vital-meta": "^1.0.0-beta.5",
     "@bodiless/vital-navigation": "^1.0.0-beta.5",
     "@bodiless/fclasses": "^1.0.0-beta.5",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-beta.5",
