--- a/sites/__minimal__/package.json
+++ b/sites/__minimal__/package.json
@@ -22,17 +22,17 @@
     "@bodiless/layouts-ui": "^1.0.0-beta.7",
     "@bodiless/richtext-ui": "^1.0.0-beta.7",
     "@bodiless/ui": "^1.0.0-beta.7",
-    "autoprefixer": "^10.0.0",
+    "autoprefixer": "^10.4.2",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "gatsby": "~3.13.0",
-    "postcss": "^8.2.4",
+    "gatsby": "^4.11.2",
+    "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "tailwindcss": "^2.0.2",
+    "tailwindcss": "^3.0.23",
     "tailwindcss-dir": "^4.0.0"
   },
   "files": [
