--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -27,20 +27,20 @@
     "@bodiless/search": "^1.0.0-beta.7",
     "@bodiless/ui": "^1.0.0-beta.7",
     "@bodiless/webpack": "^1.0.0-beta.7",
-    "autoprefixer": "^10.0.0",
+    "autoprefixer": "^10.4.2",
     "docsify-cli": "^4.3.0",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
-    "gatsby": "~3.13.0",
-    "gatsby-plugin-canonical-urls": "^3.6.0",
-    "gatsby-plugin-sitemap": "^4.2.0",
+    "gatsby": "^4.11.2",
+    "gatsby-plugin-canonical-urls": "^4.10.0",
+    "gatsby-plugin-sitemap": "^5.10.2",
     "glob": "^7.1.6",
     "informed": "^3.34.0",
     "lodash": "^4.17.19",
     "mobx-react": "^7.2.1",
     "ora": "^4.0.2",
-    "postcss": "^8.2.4",
+    "postcss": "^8.4.12",
     "rc-tooltip": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -79,7 +79,7 @@
     "gatsby-plugin-compile-es6-packages": "^1.1.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.26",
     "npm-run-all": "^4.1.5",
-    "tailwindcss": "^2.0.2",
+    "tailwindcss": "^3.0.23",
     "tailwindcss-dir": "^4.0.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^4.0.0"
