--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -100,6 +100,7 @@
     "walkdir": "^0.4.1"
   },
   "devDependencies": {
+    "@statoscope/webpack-plugin": "^5.20.1",
     "tailwindcss": "^3.0.23"
   },
   "peerDependencies": {
