--- a/packages/vital-card/package.json
+++ b/packages/vital-card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bodiless/vital-card",
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0-beta.7",
   "description": "Card component to display information through an image,text or other media content",
   "author": "Dewen Li <dli94@its.jnj.com>",
   "license": "Apache-2.0",
@@ -29,9 +29,9 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
-    "@bodiless/core": "^1.0.0-beta.5",
-    "@bodiless/fclasses": "^1.0.0-beta.5",
-    "@bodiless/cx-elements": "^1.0.0-beta.5",
+    "@bodiless/core": "^1.0.0-beta.7",
+    "@bodiless/fclasses": "^1.0.0-beta.7",
+    "@bodiless/vital-elements": "^1.0.0-beta.7",
     "lodash": "^4.17.19",
     "uuid": "^3.3.2"
   },
