--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -70,6 +70,8 @@
       "@bodiless/tokens/*": ["bodiless-tokens/src/*"],
       "@bodiless/ui": ["bodiless-ui/src"],
       "@bodiless/ui/*": ["bodiless-ui/src/*"],
+      "@bodiless/vital-content-listing": ["vital-content-listing/src/"],
+      "@bodiless/vital-content-listing/*": ["vital-content-listing/src/*"],
       "@bodiless/vital-editors": ["vital-editors/src/"],
       "@bodiless/vital-editors/*": ["vital-editors/src/*"],
       "@bodiless/vital-elements": ["vital-elements/src/"],
