--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -64,6 +64,7 @@
     "@types/walk": "^2.3.0",
     "autoprefixer": "^10.4.2",
     "axios": "^0.21.0",
+    "common-tags": "^1.8.0",
     "crypto-browserify": "^3.12.0",
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
@@ -101,7 +102,8 @@
   },
   "devDependencies": {
     "@statoscope/webpack-plugin": "^5.20.1",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "@types/common-tags": "^1.8.0"
   },
   "peerDependencies": {
     "gatsby": "^4.11.2",
