--- a/packages/vital-content-listing/package.json
+++ b/packages/vital-content-listing/package.json
@@ -33,6 +33,11 @@
     "@bodiless/components-ui": "^1.0.0-beta.7",
     "@bodiless/core": "^1.0.0-beta.7",
     "@bodiless/fclasses": "^1.0.0-beta.7",
+    "@bodiless/filtering": "^1.0.0-beta.7",
+    "@bodiless/vital-elements": "^1.0.0-beta.7",
+    "@bodiless/vital-flowcontainer": "^1.0.0-beta.7",
+    "@bodiless/vital-image": "^1.0.0-beta.7",
+    "@bodiless/vital-layout": "^1.0.0-beta.7",
     "lodash": "^4.17.19"
   },
   "peerDependencies": {
