--- a/packages/vital-card/package.json
+++ b/packages/vital-card/package.json
@@ -30,9 +30,12 @@
   },
   "dependencies": {
     "@bodiless/core": "^1.0.0-beta.7",
+    "@bodiless/components-ui": "^1.0.0-beta.7",
     "@bodiless/fclasses": "^1.0.0-beta.7",
+    "@bodiless/vital-editors": "^1.0.0-beta.7",
     "@bodiless/vital-elements": "^1.0.0-beta.7",
     "@bodiless/vital-image": "^1.0.0-beta.7",
+    "@bodiless/vital-link": "^1.0.0-beta.7",
     "lodash": "^4.17.19",
     "uuid": "^3.3.2"
   },
