--- a/packages/vital-card/package.json
+++ b/packages/vital-card/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@bodiless/core": "^1.0.0-beta.7",
+    "@bodiless/components": "^1.0.0-beta.7",
     "@bodiless/components-ui": "^1.0.0-beta.7",
     "@bodiless/fclasses": "^1.0.0-beta.7",
     "@bodiless/vital-editors": "^1.0.0-beta.7",
