--- a/sites/__vital__/package.json
+++ b/sites/__vital__/package.json
@@ -25,6 +25,7 @@
     "@bodiless/vital-editors": "^1.0.0-beta.7",
     "@bodiless/vital-elements": "^1.0.0-beta.7",
     "@bodiless/vital-link": "^1.0.0-beta.7",
+    "@bodiless/vital-list": "^1.0.0-beta.7",
     "@bodiless/vital-templates": "^1.0.0-beta.7",
     "@bodiless/webpack": "^1.0.0-beta.7",
     "autoprefixer": "^10.4.2",
