--- a/packages/vital-card/package.json
+++ b/packages/vital-card/package.json
@@ -11,7 +11,7 @@
     "/lib",
     "/bodiless.docs.json",
     "/doc",
-    "site.tailwind.config.js"
+    "tailwind.config.js"
   ],
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "@bodiless/vital-image": "^1.0.0-beta.7",
     "@bodiless/vital-link": "^1.0.0-beta.7",
     "lodash": "^4.17.19",
+    "tailwindcss": "^3.0.23",
     "uuid": "^3.3.2"
   },
   "peerDependencies": {
