--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -84,6 +84,8 @@
       "@bodiless/vital-link/*": ["vital-link/src/*"],
       "@bodiless/vital-navigation": ["vital-navigation/src/"],
       "@bodiless/vital-navigation/*": ["vital-navigation/src/*"],
+      "@bodiless/vital-table": ["vital-table/src/"],
+      "@bodiless/vital-table/*": ["vital-table/src/*"],        
       "@bodiless/vital-templates": ["vital-templates/src/"],
       "@bodiless/vital-templates/*": ["vital-templates/src/*"],      
       "@bodiless/youtube": ["bodiless-youtube/src"],
