--- a/packages/vital-layout/package.json
+++ b/packages/vital-layout/package.json
@@ -40,6 +40,7 @@
     "@bodiless/vital-elements": "^1.0.0-beta.7",
     "@bodiless/vital-image": "^1.0.0-beta.7",
     "@bodiless/vital-link": "^1.0.0-beta.7",
+    "@bodiless/vital-meta": "^1.0.0-beta.7",
     "@bodiless/vital-navigation": "^1.0.0-beta.7",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
