--- a/packages/__minimal__/package.json
+++ b/packages/__minimal__/package.json
@@ -1,7 +1,7 @@
 {
   "name": "--minimal--",
   "sideEffects": false,
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0-rc.2",
   "description": "Starter template for a BodilessJS Design System package",
   "author": "Chris Oden <coden@its.jnj.com>",
   "license": "Apache-2.0",
@@ -21,26 +21,25 @@
     "url": "https://github.com/johnsonandjohnson/bodiless-js.git"
   },
   "scripts": {
-    "build": "run-p build:lib",
+    "build": "npm run build:lib",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
-    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api ./src",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo"
   },
   "peerDependencies": {
     "react": "^17.0.2"
   },
   "dependencies": {
-    "@bodiless/cli": "^1.0.0-rc.1",
-    "@bodiless/components": "^1.0.0-rc.1",
-    "@bodiless/components-ui": "^1.0.0-rc.1",
-    "@bodiless/core": "^1.0.0-rc.1",
-    "@bodiless/documentation": "^1.0.0-rc.1",
-    "@bodiless/fclasses": "^1.0.0-rc.1",
-    "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.1",
-    "@bodiless/layouts-ui": "^1.0.0-rc.1",
-    "@bodiless/richtext-ui": "^1.0.0-rc.1",
-    "@bodiless/ui": "^1.0.0-rc.1",
+    "@bodiless/cli": "^1.0.0-rc.2",
+    "@bodiless/components": "^1.0.0-rc.2",
+    "@bodiless/components-ui": "^1.0.0-rc.2",
+    "@bodiless/core": "^1.0.0-rc.2",
+    "@bodiless/documentation": "^1.0.0-rc.2",
+    "@bodiless/fclasses": "^1.0.0-rc.2",
+    "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.2",
+    "@bodiless/layouts-ui": "^1.0.0-rc.2",
+    "@bodiless/richtext-ui": "^1.0.0-rc.2",
+    "@bodiless/ui": "^1.0.0-rc.2",
     "lodash": "^4.17.19",
     "tailwindcss": "^3.0.23"
   }
