--- a/packages/vital-card/package.json
+++ b/packages/vital-card/package.json
@@ -22,9 +22,10 @@
     "access": "public"
   },
   "scripts": {
-    "build": "npm run copy && tsc -p ./tsconfig.json && npm run build:api-doc",
+    "build": "run-s build:lib build:api-doc",
+    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api src",
+    "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build -- --watch",
-    "build:api-doc": "typedoc --out doc/api src",
     "lint": "tslint ./src/**/*.ts?x",
     "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\"",
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
