--- a/packages/gatsby-theme-bodiless/package.json
+++ b/packages/gatsby-theme-bodiless/package.json
@@ -23,6 +23,7 @@
     "gatsby-browser.js",
     "gatsby-config.js",
     "gatsby-node.js",
+    "gatsby-ssr.js",
     "queries.jsx",
     "Logger.js",
     "src/no-scroll-settings.json",
