--- a/packages/vital-layout/package.json
+++ b/packages/vital-layout/package.json
@@ -22,11 +22,12 @@
     "access": "public"
   },
   "scripts": {
-    "build": "run-p build:lib",
+    "build": "run-s build:lib copy build:api-doc",
     "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api src",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
-    "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
+    "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\"",
+    "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
     "@bodiless/cli": "^1.0.0-rc.12",
