--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -20,6 +20,7 @@
     "@bodiless/documentation": "^1.0.0-rc.14",
     "@bodiless/fclasses": "^1.0.0-rc.14",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.14",
+    "@bodiless/i18n": "^1.0.0-rc.14",
     "@bodiless/schema-org": "^1.0.0-rc.14",
     "@bodiless/ui": "^1.0.0-rc.14",
     "@bodiless/vital-buttons": "^1.0.0-rc.14",
