--- a/packages/vital-image/package.json
+++ b/packages/vital-image/package.json
@@ -22,11 +22,12 @@
     "access": "public"
   },
   "scripts": {
-    "build": "run-p build:lib",
+    "build": "run-s build:lib copy build:api-doc",
     "build:lib": "tsc -p ./tsconfig.json",
     "build:watch": "npm run build:lib -- --watch",
-    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api ./src",
-    "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\""
+    "build:api-doc": "typedoc --options ../../typedoc.js --out doc/api src",
+    "clean": "rimraf \"lib/*\" && rimraf tsconfig.tsbuildinfo && rimraf \"doc/api\"",
+    "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "peerDependencies": {
     "react": "^17.0.2"
