--- a/sites/vital-demo/package.json
+++ b/sites/vital-demo/package.json
@@ -21,6 +21,8 @@
     "@bodiless/fclasses": "^1.0.0-rc.16",
     "@bodiless/gatsby-theme-bodiless": "^1.0.0-rc.16",
     "@bodiless/i18n": "^1.0.0-rc.16",
+    "@bodiless/layouts": "^1.0.0-rc.16",
+    "@bodiless/layouts-ui": "^1.0.0-rc.16",
     "@bodiless/schema-org": "^1.0.0-rc.16",
     "@bodiless/ui": "^1.0.0-rc.16",
     "@bodiless/vital-buttons": "^1.0.0-rc.16",
