--- a/packages/knapsack-renderer/package.json
+++ b/packages/knapsack-renderer/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@bodiless/knapsack-renderer",
   "description": "Render Bodiless templates in Knapsack",
-  "version": "3.33.4",
+  "version": "1.0.0-rc.25",
   "type": "commonjs",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.js"
+      "require": "./lib/index.js"
     },
     "./package": "./package.json",
     "./package.json": "./package.json"
@@ -16,28 +16,28 @@
   "scripts": {
     "build": "tsc",
     "start": "npm run build -- --watch",
-    "clean": "rm -rf ./dist",
+    "clean": "rm -rf ./lib",
     "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx ./src ./tests",
     "test": "ava"
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-react": "^7.16.0",
-    "@knapsack/app": "^3.47.0",
-    "@knapsack/core": "^3.47.0",
-    "@knapsack/file-utils": "^3.47.0",
-    "@knapsack/renderer-react": "^3.47.0",
-    "@knapsack/renderer-webpack-base": "^3.47.0",
-    "@knapsack/types": "^3.47.0",
-    "@knapsack/utils": "^3.47.0",
+    "@knapsack/app": "^3.103.3",
+    "@knapsack/core": "^3.103.3",
+    "@knapsack/file-utils": "^3.103.3",
+    "@knapsack/renderer-react": "^3.103.3",
+    "@knapsack/renderer-webpack-base": "^3.103.3",
+    "@knapsack/types": "^3.103.3",
+    "@knapsack/utils": "^3.103.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@bodiless/fclasses": "^1.0.0-rc.25",
-    "@knapsack/prettier-config": "^3.47.0",
-    "@knapsack/test-ava": "^3.47.0",
-    "@knapsack/typescript-config-starter": "^3.47.0",
+    "@knapsack/prettier-config": "^3.103.3",
+    "@knapsack/test-ava": "^3.103.3",
+    "@knapsack/typescript-config-starter": "^3.103.3",
     "@types/babel__core": "^7.1.16",
     "@types/node": "^16",
     "@types/react": "^17.0.39",
@@ -46,7 +46,7 @@
     "ts-expect": "^1.3.0",
     "typescript": "^4.0.0"
   },
-  "license": "GPL-2.0-or-later",
+  "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
   },
