--- a/packages/knapsack-renderer/package.json
+++ b/packages/knapsack-renderer/package.json
@@ -46,6 +46,9 @@
     "ts-expect": "^1.3.0",
     "typescript": "^4.0.0"
   },
+  "files": [
+    "/lib"
+  ],
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
