--- a/packages/bodiless-card/package.json
+++ b/packages/bodiless-card/package.json
@@ -33,6 +33,7 @@
     "@bodiless/cli": "^1.0.0-rc.25",
     "@bodiless/core": "^1.0.0-rc.25",
     "@bodiless/fclasses": "^1.0.0-rc.25",
+    "@bodiless/knapsack-renderer": "^1.0.0-rc.25",
     "lodash": "^4.17.19",
     "uuid": "^3.3.2"
   },
