--- a/packages/vital-card/package.json
+++ b/packages/vital-card/package.json
@@ -31,6 +31,7 @@
     "copy": "copyfiles -u 1 \"./src/**/*.{css,png}\" \"./lib/\""
   },
   "dependencies": {
+    "@bodiless/knapsack-renderer": "^1.0.0-rc.25",
     "@bodiless/cli": "^1.0.0-rc.25",
     "@bodiless/components": "^1.0.0-rc.25",
     "@bodiless/components-ui": "^1.0.0-rc.25",
