--- a/sites/knapsack/package.json
+++ b/sites/knapsack/package.json
@@ -21,8 +21,25 @@
     "@knapsack/app": "^3.103.3",
     "@bodiless/fclasses": "^1.0.0-rc.25",
     "@bodiless/core": "^1.0.0-rc.25",
+    "@bodiless/vital-accordion": "^1.0.0-rc.25",
+    "@bodiless/vital-buttons": "^1.0.0-rc.25",
+    "@bodiless/vital-card": "^1.0.0-rc.25",
+    "@bodiless/vital-content-listing": "^1.0.0-rc.25",
+    "@bodiless/vital-editors": "^1.0.0-rc.25",
+    "@bodiless/vital-elements": "^1.0.0-rc.25",
+    "@bodiless/vital-flowcontainer": "^1.0.0-rc.25",
+    "@bodiless/vital-image": "^1.0.0-rc.25",
+    "@bodiless/vital-layout": "^1.0.0-rc.25",
+    "@bodiless/vital-link": "^1.0.0-rc.25",
+    "@bodiless/vital-list": "^1.0.0-rc.25",
+    "@bodiless/vital-meta": "^1.0.0-rc.25",
+    "@bodiless/vital-navigation": "^1.0.0-rc.25",
+    "@bodiless/vital-search": "^1.0.0-rc.25",
+    "@bodiless/vital-table": "^1.0.0-rc.25",
+    "@bodiless/vital-templates": "^1.0.0-rc.25",
+    "@bodiless/vital-test": "^1.0.0-rc.25",
+    "@bodiless/vital-youtube": "^1.0.0-rc.25",
     "@bodiless/knapsack-renderer": "^1.0.0-rc.25",
-    "@bodiless/card": "^1.0.0-rc.25",
     "@types/react": "^17.0.39",
     "react": "^17.0.2",
     "esm": "^3.2.25",
