--- a/packages/vital-elements/package.json
+++ b/packages/vital-elements/package.json
@@ -36,6 +36,7 @@
     "@bodiless/core-ui": "^1.0.0-rc.25",
     "@bodiless/fclasses": "^1.0.0-rc.25",
     "@bodiless/hydration": "^1.0.0-rc.25",
+    "@bodiless/knapsack-renderer": "^1.0.0-rc.25",
     "@types/webpack": "^5.0.0",
     "lodash": "^4.17.19",
     "mobx": "^6.0.0",
